# Job-tracker-

./: .env.example  .gitignore  README.md  job_tracker.db  pyproject.toml  requirements.txt  test_job_tracker.db
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: job_applications.py
app/core/: config.py  database.py  dependencies.py
app/models/: job_application.py
app/repositories/: job_application_repository.py
app/schemas/: job_application.py
app/services/: job_application_service.py
tests/: conftest.py
tests/integration/: test_job_applications_api.py
tests/unit/: test_job_application_service.py
