[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job-tracker"
version = "0.1.0"
description = "FastAPI app for tracking job applications"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "aiosqlite",
    "greenlet",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
managed = true

[tool.uv.sources]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]
